# minAgent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  addition.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
minagent/: agent.py  docker_manager.py  environment.py  task.py  tools.py
